--- a/Northwind/Northwind/Base.lproj/Main.storyboard
+++ b/Northwind/Northwind/Base.lproj/Main.storyboard
@@ -50,7 +50,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9BE-11-v7g" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1648.8" y="132.68365817091455"/>
+            <point key="canvasLocation" x="1766" y="-218"/>
         </scene>
         <!--Product DetailsVC-->
         <scene sceneID="kK6-vA-ed3">
@@ -277,6 +277,9 @@
                                                 <constraint firstItem="7GE-eV-FuV" firstAttribute="centerY" secondItem="s0R-9g-gPQ" secondAttribute="centerY" id="nQQ-03-zNJ"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="bF7-TU-XRa" kind="show" id="3b9-y1-uCe"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -327,6 +330,49 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LfR-zJ-q8c" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="30" y="135"/>
+        </scene>
+        <!--ListVC-->
+        <scene sceneID="Lvj-Dj-KNA">
+            <objects>
+                <tableViewController id="bF7-TU-XRa" userLabel="ListVC" customClass="CategoriesTableViewController" customModule="Northwind" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="interactive" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="8hw-pF-YGe">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="L2W-Gx-yey">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="bF7-TU-XRa" id="cH8-XE-MkT"/>
+                            </connections>
+                        </searchBar>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="TMI-tD-zqO">
+                                <rect key="frame" x="0.0" y="72" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="TMI-tD-zqO" id="BBb-hF-s23">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="bF7-TU-XRa" id="Wh2-Oa-ERE"/>
+                            <outlet property="delegate" destination="bF7-TU-XRa" id="Gji-oe-XRP"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Categories List" id="EhM-vw-HIb">
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="d0G-ou-L0M">
+                            <connections>
+                                <action selector="addButtonTapped:" destination="bF7-TU-XRa" id="4wp-Mv-ao5"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oCU-k3-Oqt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1766" y="495"/>
         </scene>
     </scenes>
 </document>
