--- a/Northwind/Northwind/Base.lproj/Main.storyboard
+++ b/Northwind/Northwind/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="17y-34-MXQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="17y-34-MXQ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -237,6 +237,10 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <gestureRecognizers/>
+                                            <connections>
+                                                <outletCollection property="gestureRecognizers" destination="7XG-tT-k9E" appends="YES" id="bgm-RY-Gsx"/>
+                                            </connections>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="E6D-Xm-Oue" detailTextLabel="Rro-c7-amf" style="IBUITableViewCellStyleValue1" id="lel-mE-QWZ">
@@ -261,6 +265,10 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <gestureRecognizers/>
+                                            <connections>
+                                                <outletCollection property="gestureRecognizers" destination="YmA-XK-QRA" appends="YES" id="l2s-s7-Zi0"/>
+                                            </connections>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </cells>
@@ -280,11 +288,23 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="categoryNameLabel" destination="ekq-A0-mea" id="tQd-4v-82e"/>
                         <outlet property="nameTextField" destination="Noz-PW-IIE" id="Qc6-jY-dRz"/>
                         <outlet property="priceTextField" destination="ya0-Ec-dW3" id="1mT-ue-hHl"/>
+                        <outlet property="supplierNameLabel" destination="Rro-c7-amf" id="KuH-PP-T5d"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wCk-q1-onE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="7XG-tT-k9E">
+                    <connections>
+                        <action selector="didTapCategory:" destination="Bl3-An-MM4" id="8QT-bM-yfc"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer id="YmA-XK-QRA">
+                    <connections>
+                        <action selector="didTapSupplier:" destination="Bl3-An-MM4" id="G2F-SF-Rp6"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="3423" y="30"/>
         </scene>
