--- a/Northwind/Northwind/Views/Cells/NumberEditTableViewCell.xib
+++ b/Northwind/Northwind/Views/Cells/NumberEditTableViewCell.xib
@@ -5,10 +5,16 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="AvenirNext.ttc">
+            <string>AvenirNext-Medium</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -20,13 +26,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DwZ-UG-OSe">
-                        <rect key="frame" x="16" y="11" width="42" height="22"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="16" y="11" width="43" height="22"/>
+                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UWW-Qg-tVe">
-                        <rect key="frame" x="68" y="7" width="236" height="30"/>
+                        <rect key="frame" x="160" y="7" width="144" height="30"/>
                         <nil key="textColor"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
@@ -40,8 +46,9 @@
                     <constraint firstAttribute="bottomMargin" secondItem="DwZ-UG-OSe" secondAttribute="bottom" id="Ivb-Eq-Ffg"/>
                     <constraint firstAttribute="trailingMargin" secondItem="UWW-Qg-tVe" secondAttribute="trailing" id="gL4-PA-wg3"/>
                     <constraint firstItem="DwZ-UG-OSe" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="gc0-r5-Adz"/>
-                    <constraint firstItem="UWW-Qg-tVe" firstAttribute="leading" secondItem="DwZ-UG-OSe" secondAttribute="trailing" constant="10" id="qLS-L8-rHJ"/>
+                    <constraint firstItem="UWW-Qg-tVe" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="DwZ-UG-OSe" secondAttribute="trailing" constant="10" id="qLS-L8-rHJ"/>
                     <constraint firstItem="UWW-Qg-tVe" firstAttribute="centerY" secondItem="DwZ-UG-OSe" secondAttribute="centerY" id="tji-Ol-6Qm"/>
+                    <constraint firstItem="UWW-Qg-tVe" firstAttribute="leading" relation="lessThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="x6K-o8-Ccm"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
