--- a/Northwind/Northwind/Views/Cells/TextEditTableViewCell.xib
+++ b/Northwind/Northwind/Views/Cells/TextEditTableViewCell.xib
@@ -5,10 +5,17 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="AvenirNext.ttc">
+            <string>AvenirNext-Medium</string>
+            <string>AvenirNext-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -20,15 +27,15 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AP4-Bv-91S">
-                        <rect key="frame" x="16" y="11" width="42" height="22"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="16" y="11" width="43" height="22"/>
+                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6Sy-VD-UQW">
-                        <rect key="frame" x="68" y="6.5" width="236" height="30"/>
+                        <rect key="frame" x="160" y="6.5" width="144" height="30"/>
                         <nil key="textColor"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                         <textInputTraits key="textInputTraits"/>
                         <connections>
                             <action selector="textFieldDidChange:" destination="KGk-i7-Jjw" eventType="editingChanged" id="tdG-9o-iu8"/>
@@ -38,8 +45,9 @@
                 <constraints>
                     <constraint firstAttribute="leadingMargin" secondItem="AP4-Bv-91S" secondAttribute="leading" id="8lD-D1-t0L"/>
                     <constraint firstAttribute="topMargin" secondItem="AP4-Bv-91S" secondAttribute="top" id="E6p-nI-TZc"/>
+                    <constraint firstItem="6Sy-VD-UQW" firstAttribute="leading" relation="lessThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="OPC-Iq-fhW"/>
                     <constraint firstAttribute="bottomMargin" secondItem="AP4-Bv-91S" secondAttribute="bottom" id="Oes-e7-VmD"/>
-                    <constraint firstItem="6Sy-VD-UQW" firstAttribute="leading" secondItem="AP4-Bv-91S" secondAttribute="trailing" constant="10" id="XZH-Z3-0r6"/>
+                    <constraint firstItem="6Sy-VD-UQW" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="AP4-Bv-91S" secondAttribute="trailing" constant="10" id="XZH-Z3-0r6"/>
                     <constraint firstAttribute="trailingMargin" secondItem="6Sy-VD-UQW" secondAttribute="trailing" id="isN-eG-gOj"/>
                     <constraint firstItem="6Sy-VD-UQW" firstAttribute="centerY" secondItem="AP4-Bv-91S" secondAttribute="centerY" id="yaR-e8-qjD"/>
                 </constraints>
